--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-  <title>Ahmadiyya Muslim Jamaat Canada Audio Video Standards teswtingmnbmnbmnbmbbnmdfsdfsdfs</title>
+  <title>Ahmadiyya Muslim Jamaat Canada Audio Video Standards</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,7 @@
   <body>
 
 
-  <p><h1 align="center">  Ahmadiyya Muslim Jamaat Canada </h1></p>
+  <p><h1 align="center">  Ahmadiyya Muslim Jamaat Canada TESTING</h1></p>
   <p><h2 align="center"> Branding Standards for Video/Livestream productions</h2></p>
   <!-- <h2>Brand Standards for Video</h2> -->
 
