--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
   <p><h1 align="center">  Ahmadiyya Muslim Jamaat Canada TESTING</h1></p>
-  <p><h2 align="center"> Branding Standards for Video/Livestream productions</h2></p>
+  <p><h2 align="center"> National Branding Standards for Video/Livestream productions</h2></p>
   <!-- <h2>Brand Standards for Video</h2> -->
 
 <title>CSS Template</title>
@@ -118,6 +118,8 @@ footer {
       <li><a href="#">Paris</a></li>
       <li><a href="#">Tokyo</a></li>
     </ul> -->
+
+    <p><a style="color:black;" href="Index.html">HOME</a></p>
     <ol>
 
         <li><a style="color:black;"  href="#section1">Splash Screen</a></li>
@@ -127,9 +129,23 @@ footer {
         <li><a style="color:black;" href="#section5">How To Videos</a></li>
 
     </ol>
-<img src="logo.png" alt="" align="center" height="150px" width="150px">
+
+    <style>
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    </style>
+
+    <a href="Index.html">
+      <img src="logo.png" alt="HOME" style="width:150px;height:150px;border:0">
+    </a>
 
 
+<!-- /*
+<img src="logo.png" alt="" align="center" height="150px" width="150px" padding(500px) >
+*/ -->
 
   </nav>
 
@@ -167,11 +183,12 @@ footer {
 
 <footer>
   <div class="container">
-      <button type="button" class="btn btn-primary">Dislaimer</button>
-      <button type="button" class="btn btn-success">Lower Thirds</button>
-      <button type="button" class="btn btn-success">Splash Screen</button>
-      <button type="button" class="btn btn-danger">Logos</button>
-      <button
+      <a href="Index.html"><button type="button" style="background-color:black" class="btn btn-primary">Home</button>
+      <a href="Index.html"><button type="button" style="background-color:gray" class="btn btn-primary">National</button>
+      <a href="MkacAvStandards.html"><button type="button" class="btn btn-primary">MKAC</button>
+      <a href="AnsarAvStandards.html"><button type="button" style="background-color:lightgreen" class="btn btn-primary">Ansar</button>
+      <a href="LajnaAvStandards.html"><button type="button" style="background-color:pink "class="btn btn-primary">Lajna</button>
+        <a href="HowToVideos.html"><button type="button" style="background-color:green "class="btn btn-primary">How-to-Videos</button>
   </div>
   <!-- <p>Footer</p> -->
 </footer>
