Alot of changes
alot of changes

--- a/HowToVideos.html
+++ b/HowToVideos.html
@@ -150,34 +150,39 @@ footer {
   </nav>
 
   <article>
+  </p>
+
+ <h2 id="section5">How to Videos</h2>
+ <p>
+ <a href="https://sites.google.com/avandishaat.com/all-tutorials/live-streams" target="_blank">1. AMJ LiveStream Tutorial</a>
 
 
-    <h2 id="section5">How to Video</h2>
+
+    </p>
     <p>
-    </p><p>
+    2. How to make Livestream Unlisted
+     </p>
+    <p>
       <video width="400" controls>
     <source src="LivestreamVideoUnlisted.mp4" type="video/mp4">
     <source src="mov_bbb.ogg" type="video/ogg">
     Your browser does not support HTML video.
   </video>
+</p>
 
-  <p>
-  How to make Livestream Unlisted
-  
-  </p>
-    </p>
+
 
   </article>
 </section>
 
 <footer>
   <div class="container">
-      <a href="Index.html"><button type="button" style="background-color:black" class="btn btn-primary">Home</button>
-      <a href="Index.html"><button type="button" style="background-color:gray" class="btn btn-primary">National</button>
-      <a href="MkacAvStandards.html"><button type="button" class="btn btn-primary">MKAC</button>
-      <a href="AnsarAvStandards.html"><button type="button" style="background-color:green" class="btn btn-primary">Ansar</button>
-      <a href="LajnaAvStandards.html"><button type="button" style="background-color:pink "class="btn btn-primary">Lajna</button>
-
+    <a href="Index.html"><button type="button" style="background-color:black" class="btn btn-primary">Home</button>
+    <a href="Index.html"><button type="button" style="background-color:black" class="btn btn-primary">National</button>
+    <a href="MkacAvStandards.html"><button type="button" style="background-color:black" class="btn btn-primary">MKAC</button>
+    <a href="AnsarAvStandards.html"><button type="button" style="background-color:black" class="btn btn-primary">Ansar</button>
+    <a href="LajnaAvStandards.html"><button type="button" style="background-color:black "class="btn btn-primary">Lajna</button>
+      <a href="HowToVideos.html"><button type="button" style="background-color:black "class="btn btn-primary">How-to-Videos</button>
   </div>
   <!-- <p>Footer</p> -->
 </footer>
