--- a/MkacAvStandards.html
+++ b/MkacAvStandards.html
@@ -27,7 +27,7 @@
 
 
   <p><h1 align="center">  Ahmadiyya Muslim Jamaat Canada</h1></p>
-  <p><h2 align="center">Mkac Branding Standards for Video/Livestream productions</h2></p>
+  <p><h2 align="center"> Branding Standards for Video/Livestream productions</h2></p>
   <!-- <h2>Brand Standards for Video</h2> -->
 
 <title>CSS Template</title>
@@ -106,7 +106,7 @@ footer {
 <p><strong>Note:</strong> Flexbox is not supported in Internet Explorer 10 and earlier versions.</p> -->
 
 <header>
-  <h2>Branding Standards</h2>
+  <h2>MKAC Branding Standards</h2>
 </header>
 <!-- /* <h2>CSS Layout Flexbox</h2> */ -->
 <!-- /* Left hand content to go here */ -->
@@ -120,7 +120,7 @@ footer {
     </ul> -->
 
     <p><a style="color:black;" href="Index.html">HOME</a></p>
-    <ol>
+    <ul>
 
         <li><a style="color:black;"  href="#section1">Splash Screen</a></li>
         <li><a style="color:black;" href="#section2">Logos</a></li>
@@ -128,7 +128,7 @@ footer {
         <li><a style="color:black;" href="#section4">Disclaimer</a></li>
         <li><a style="color:black;" href="#section5">How To Videos</a></li>
 
-    </ol>
+    </ul>
 
     <style>
     img {
@@ -150,32 +150,117 @@ footer {
   </nav>
 
   <article>
-
+    <style>
+    table, th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+    }
+    </style>
   </p><p>
     <p>The number of video productions are increasing. This webpage will serve as a resource to produce high quality content with consistent branding.
        Standards for splash screens, lower thirds, discalmer and logos are going to be avaliable for download. When creating videos please use the appropriate standards as it
        pertains to the respective auxilary organzations (National, MKAC, Atfal, Ansar and Lajna events).
 
     </p>
+    <table style="width:100%">
+      <tr>
+        <th></th>
+        <th style="text-align:center">Tasks</th>
+        <th style="text-align:center">Comments</th>
+      </tr>
+      <tr>
+        <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
+        <td style="text-align:center">Go to Respective Auxilary Page</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td style="text-align:center"><input type="checkbox" name="name1" />&nbsp;</td>
+        <td style="text-align:center">Splash Screen Prep / Download</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
+        <td style="text-align:center">Downloaded Appropriate Logo</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
+        <td style="text-align:center">Lower Thirds Created</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
+        <td style="text-align:center">Disclaimer included</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
+        <td style="text-align:center">Advance Users watch How to Videos</td>
+        <td></td>
+      </tr>
+
+    </table>
+
+    <p> &emsp; </p>
+
+    <ol>
+
+        <li><a style="color:black;"  href="#section1">Splash Screen</a></li>
+        <li><a style="color:black;" href="#section2">Logos</a></li>
+        <li><a style="color:black;" href="#section3">Lower Thirds</a></li>
+        <li><a style="color:black;" href="#section4">Disclaimer</a></li>
+        <li><a style="color:black;" href="#section5">How To Videos</a></li>
+
+    </ol>
     <h2 id="section1">Splash Screen</h2>
     <p>
-        Criteria
+      <ul>
+
+          <li><a style="color:black;"  >The splash screen should have the logo downloaded from Logo Section.</a></li>
+          <li><a style="color:black;"  >Event name / Date / Time should be included.</a></li>
+          <li><a style="color:black;"  >Appropriate font size should be tested prior to event.</a></li>
+          <li><a style="color:black;"  >Refrain from using bright font/background colours.</a></li>
+          <li><a style="color:black;"  >When applicable please use template provided in link below.</a></li>
+          <li><a style="color:black;"  >Template link coming soon.</a></li>
+      </ul>
+
+
+
+
+
     </p>
     <h2 id="section2">Logos</h2>
     <p>
-        logo criteria
+      <ul>
+
+          <li><a style="color:black;"  >Logo should be used from this website</a></li>
+          <li><a style="color:black;"  >Only approved logos should be added in footage</a></li>
+          <li><a style="color:black;"  >Logo link coming soon.</a></li>
+
+      </ul>
     </p>
     <h2 id="section3">Lower Thirds</h2>
     <p>
-        Lower Thirds Criteria
+      <ul>
+
+          <li><a style="color:black;"  >Names of presenter should be obtained prior to event.</a></li>
+          <li><a style="color:black;"  >Proper spelling and section names should be used.</a></li>
+          <li><a style="color:black;"  >Lower thirds should be tested prior to Event</a></li>
+          <li><a style="color:black;"  >Proper colors / fonts should be used.</a></li>
+      </ul>
     </p>
     <h2 id="section4">Disclaimer</h2>
     <p>
-        Disclaimer Criteria
+      <ul>
+
+          <li><a style="color:black;"  >Disclaimer should be shown in every footage.</a></li>
+          <li><a style="color:black;"  >Please choose the standard dislaimer from link below.</a></li>
+          <li><a style="color:black;"  >Disclaimer link coming soon.</a></li>
+      </ul>
     </p>
-    <h2 id="section5">How to Video</h2>
     <p>
-        Resources
+      <a style="color:black;" href="HowToVideos.html">Resources</a>
+
     </p>
 
   </article>
@@ -183,12 +268,12 @@ footer {
 
 <footer>
   <div class="container">
-    <a href="Index.html"><button type="button" style="background-color:black" class="btn btn-primary">Home</button>
-    <a href="Index.html"><button type="button" style="background-color:gray" class="btn btn-primary">National</button>
-    <a href="MkacAvStandards.html"><button type="button" class="btn btn-primary">MKAC</button>
-    <a href="AnsarAvStandards.html"><button type="button" style="background-color:lightgreen" class="btn btn-primary">Ansar</button>
-    <a href="LajnaAvStandards.html"><button type="button" style="background-color:pink "class="btn btn-primary">Lajna</button>
-      <a href="HowToVideos.html"><button type="button" style="background-color:green "class="btn btn-primary">How-to-Videos</button>
+
+    <a href="Index.html"><button type="button" style="background-color:black" class="btn btn-primary">National</button>
+    <a href="MkacAvStandards.html"><button type="button" style="background-color:black" class="btn btn-primary">MKAC</button>
+    <a href="AnsarAvStandards.html"><button type="button" style="background-color:black" class="btn btn-primary">Ansar</button>
+    <a href="LajnaAvStandards.html"><button type="button" style="background-color:black "class="btn btn-primary">Lajna</button>
+      <a href="HowToVideos.html"><button type="button" style="background-color:black "class="btn btn-primary">How-to-Videos</button>
   </div>
   <!-- <p>Footer</p> -->
 </footer>
