added stylesheet and images

--- a/AnsarAvStandards.html
+++ b/AnsarAvStandards.html
@@ -20,7 +20,7 @@
           }
       </style>
 
-
+<link rel="stylesheet" href="styles.css">
 
   </head>
   <body>
@@ -106,7 +106,7 @@ footer {
 <p><strong>Note:</strong> Flexbox is not supported in Internet Explorer 10 and earlier versions.</p> -->
 
 <header>
-  <h2>Ansar Branding Standards</h2>
+  <h3>Ansar Branding Standards</h3>
 </header>
 <!-- /* <h2>CSS Layout Flexbox</h2> */ -->
 <!-- /* Left hand content to go here */ -->
@@ -166,40 +166,41 @@ footer {
       <tr>
         <th></th>
         <th style="text-align:center">Tasks</th>
-        <th style="text-align:center">Comments</th>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Go to Respective Auxilary Page</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name1" />&nbsp;</td>
         <td style="text-align:center">Splash Screen Prep / Download</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Downloaded Appropriate Logo</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Lower Thirds Created</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Disclaimer included</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Advance Users watch How to Videos</td>
-        <td></td>
+
       </tr>
 
     </table>
+
 
     <p> &emsp; </p>
 
@@ -236,6 +237,9 @@ footer {
           <li><a style="color:black;"  >Logo should be used from this website</a></li>
           <li><a style="color:black;"  >Only approved logos should be added in footage</a></li>
           <li><a style="color:black;"  >Logo link coming soon.</a></li>
+          <a href="images/Ansar_logo.png" download>
+            <img src="images/Ansar_logo.png" alt="" width="650" height="142">
+          </a>
 
       </ul>
     </p>
