--- a/HowToVideos.html
+++ b/HowToVideos.html
@@ -170,6 +170,11 @@ footer {
   </video>
 </p>
 
+<a href="https://www.khuddam.ca/mka-brand-guideline/" target="_blank">3. MKAC Brand Guideline</a>
+<p>
+
+</p>
+<a href="https://www.alislam.org/branding-logo/" target="_blank">4. London Markaz Logo Guideline</a>
 
 
   </article>
