--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+
+
   <div class="alert alert-primary" role="alert">
     This website is beta and unofficial.  Use for National AV Team Members Only  <a href="" class="alert-link"></a>.
   </div>
@@ -22,13 +25,13 @@
           }
       </style>
 
-
+<link rel="stylesheet" href="styles.css">
 
   </head>
   <body>
 
 
-  <p><h1 align="center">  Ahmadiyya Muslim Jamaat Canada TESTING</h1></p>
+  <p><h1 align="center">  Ahmadiyya Muslim Jamaat Canada</h1></p>
   <p><h2 align="center"> Branding Standards for Video/Livestream productions</h2></p>
   <!-- <h2>Brand Standards for Video</h2> -->
 
@@ -108,7 +111,7 @@ footer {
 <p><strong>Note:</strong> Flexbox is not supported in Internet Explorer 10 and earlier versions.</p> -->
 
 <header>
-  <h2>National Events Branding Standards</h2>
+  <h3>National Events Branding Standards</h3>
 </header>
 <!-- /* <h2>CSS Layout Flexbox</h2> */ -->
 <!-- /* Left hand content to go here */ -->
@@ -172,37 +175,37 @@ footer {
       <tr>
         <th></th>
         <th style="text-align:center">Tasks</th>
-        <th style="text-align:center">Comments</th>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Go to Respective Auxilary Page</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name1" />&nbsp;</td>
         <td style="text-align:center">Splash Screen Prep / Download</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Downloaded Appropriate Logo</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Lower Thirds Created</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Disclaimer included</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Advance Users watch How to Videos</td>
-        <td></td>
+
       </tr>
 
     </table>
@@ -231,10 +234,6 @@ footer {
           <li><a style="color:black;"  >Template link coming soon.</a></li>
       </ul>
 
-
-
-
-
     </p>
     <h2 id="section2">Logos</h2>
     <p>
@@ -243,6 +242,15 @@ footer {
           <li><a style="color:black;"  >Logo should be used from this website</a></li>
           <li><a style="color:black;"  >Only approved logos should be added in footage</a></li>
           <li><a style="color:black;"  >Logo link coming soon.</a></li>
+          <p>Click on the logo to download the image:<p>
+
+          <a href="images/AMC_logo_canada_final.png" download>
+            <img src="images/AMC_logo_canada_final.png" alt="" width="350" height="142">
+          </a>
+
+
+
+
 
       </ul>
     </p>
