--- a/MkacAvStandards.html
+++ b/MkacAvStandards.html
@@ -20,7 +20,7 @@
           }
       </style>
 
-
+<link rel="stylesheet" href="styles.css">
 
   </head>
   <body>
@@ -106,7 +106,7 @@ footer {
 <p><strong>Note:</strong> Flexbox is not supported in Internet Explorer 10 and earlier versions.</p> -->
 
 <header>
-  <h2>MKAC Branding Standards</h2>
+  <h3>MKAC Branding Standards</h3>
 </header>
 <!-- /* <h2>CSS Layout Flexbox</h2> */ -->
 <!-- /* Left hand content to go here */ -->
@@ -166,37 +166,37 @@ footer {
       <tr>
         <th></th>
         <th style="text-align:center">Tasks</th>
-        <th style="text-align:center">Comments</th>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Go to Respective Auxilary Page</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name1" />&nbsp;</td>
         <td style="text-align:center">Splash Screen Prep / Download</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Downloaded Appropriate Logo</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Lower Thirds Created</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Disclaimer included</td>
-        <td></td>
+
       </tr>
       <tr>
         <td style="text-align:center"><input type="checkbox" name="name2" />&nbsp;</td>
         <td style="text-align:center">Advance Users watch How to Videos</td>
-        <td></td>
+
       </tr>
 
     </table>
@@ -224,10 +224,6 @@ footer {
           <li><a style="color:black;"  >Template link coming soon.</a></li>
       </ul>
 
-
-
-
-
     </p>
     <h2 id="section2">Logos</h2>
     <p>
@@ -236,6 +232,10 @@ footer {
           <li><a style="color:black;"  >Logo should be used from this website</a></li>
           <li><a style="color:black;"  >Only approved logos should be added in footage</a></li>
           <li><a style="color:black;"  >Logo link coming soon.</a></li>
+
+          <a href="images/MKAC_Logo.png" download>
+            <img src="images/MKAC_Logo.png" alt="" width="200" height="200">
+          </a>
 
       </ul>
     </p>
@@ -252,7 +252,6 @@ footer {
     <h2 id="section4">Disclaimer</h2>
     <p>
       <ul>
-
           <li><a style="color:black;"  >Disclaimer should be shown in every footage.</a></li>
           <li><a style="color:black;"  >Please choose the standard dislaimer from link below.</a></li>
           <li><a style="color:black;"  >Disclaimer link coming soon.</a></li>
@@ -273,7 +272,8 @@ footer {
     <a href="MkacAvStandards.html"><button type="button" style="background-color:black" class="btn btn-primary">MKAC</button>
     <a href="AnsarAvStandards.html"><button type="button" style="background-color:black" class="btn btn-primary">Ansar</button>
     <a href="LajnaAvStandards.html"><button type="button" style="background-color:black "class="btn btn-primary">Lajna</button>
-      <a href="HowToVideos.html"><button type="button" style="background-color:black "class="btn btn-primary">How-to-Videos</button>
+    <a href="HowToVideos.html"><button type="button" style="background-color:black "class="btn btn-primary">How-to-Videos</button>
+
   </div>
   <!-- <p>Footer</p> -->
 </footer>
