--- a/HowToVideos.html
+++ b/HowToVideos.html
@@ -182,7 +182,7 @@ footer {
 
 <footer>
   <div class="container">
-    <a href="Index.html"><button type="button" style="background-color:black" class="btn btn-primary">National</button>
+    <a href="index.html"><button type="button" style="background-color:black" class="btn btn-primary">National</button>
     <a href="MkacAvStandards.html"><button type="button" style="background-color:black" class="btn btn-primary">MKAC</button>
     <a href="AnsarAvStandards.html"><button type="button" style="background-color:black" class="btn btn-primary">Ansar</button>
     <a href="LajnaAvStandards.html"><button type="button" style="background-color:black "class="btn btn-primary">Lajna</button>
