changed I to i in reference to index

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ footer {
     }
     </style>
 
-    <a href="Index.html">
+    <a href="index.html">
       <img src="logo.png" alt="HOME" style="width:150px;height:150px;border:0">
     </a>
 
@@ -285,7 +285,7 @@ footer {
 <footer>
   <div class="container">
 
-      <a href="Index.html"><button type="button" style="background-color:black" class="btn btn-primary">National</button>
+      <a href="index.html"><button type="button" style="background-color:black" class="btn btn-primary">National</button>
       <a href="MkacAvStandards.html"><button type="button" style="background-color:black" class="btn btn-primary">MKAC</button>
       <a href="AnsarAvStandards.html"><button type="button" style="background-color:black" class="btn btn-primary">Ansar</button>
       <a href="LajnaAvStandards.html"><button type="button" style="background-color:black "class="btn btn-primary">Lajna</button>
