--- a/HowToVideos.html
+++ b/HowToVideos.html
@@ -168,13 +168,29 @@ footer {
     <source src="mov_bbb.ogg" type="video/ogg">
     Your browser does not support HTML video.
   </video>
+  <p>
+
+  </p>
+
+  3. How to make Encode raw file using Adobe
+   </p>
+  <p>
+    <video width="400" controls>
+  <source src="HowToEncodeRawFile.mp4" type="video/mp4">
+  <source src="mov_bbb.ogg" type="video/ogg">
+  Your browser does not support HTML video.
+</video>
 </p>
 
-<a href="https://www.khuddam.ca/mka-brand-guideline/" target="_blank">3. MKAC Brand Guideline</a>
+<a href="https://youtu.be/nW7QVLi3s5g" target="_blank">4. AJA Helo Device Setup Tutorial</a>
+<p>
+</p>
+
+<a href="https://www.khuddam.ca/mka-brand-guideline/" target="_blank">5. MKAC Brand Guideline</a>
 <p>
 
 </p>
-<a href="https://www.alislam.org/branding-logo/" target="_blank">4. London Markaz Logo Guideline</a>
+<a href="https://www.alislam.org/branding-logo/" target="_blank">6. London Markaz Logo Guideline</a>
 
 
   </article>
