--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ footer {
       <li><a href="#">Tokyo</a></li>
     </ul> -->
 
-    <p><a style="color:black;" href="Index.html">HOME</a></p>
+    <p><a style="color:black;" href="index.html">HOME</a></p>
     <ul>
 
         <li><a style="color:black;"  href="#section1">Splash Screen</a></li>
