--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-
-
+  <!-- alert banner -->
   <div class="alert alert-primary" role="alert">
     This website is beta and unofficial.  Use for National AV Team Members Only  <a href="" class="alert-link"></a>.
   </div>
   <title>Ahmadiyya Muslim Jamaat Canada Audio Video Standards</title>
+  <!-- bootstrap component to divide page into 3 parts -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -118,11 +117,6 @@ footer {
 
 <section>
   <nav>
-    <!-- <ul>
-      <li><a href="#">London</a></li>
-      <li><a href="#">Paris</a></li>
-      <li><a href="#">Tokyo</a></li>
-    </ul> -->
 
     <p><a style="color:black;" href="index.html">HOME</a></p>
     <ul>
@@ -147,10 +141,6 @@ footer {
       <img src="logo.png" alt="HOME" style="width:150px;height:150px;border:0">
     </a>
 
-
-<!-- /*
-<img src="logo.png" alt="" align="center" height="150px" width="150px" padding(500px) >
-*/ -->
 
   </nav>
 
@@ -247,10 +237,6 @@ footer {
           <a href="images/AMC_logo_canada_final.png" download>
             <img src="images/AMC_logo_canada_final.png" alt="" width="350" height="142">
           </a>
-
-
-
-
 
       </ul>
     </p>
