--- a/LajnaAvStandards.html
+++ b/LajnaAvStandards.html
@@ -157,11 +157,7 @@ footer {
     }
     </style>
   </p><p>
-    <p>The number of video productions are increasing. This webpage will serve as a resource to produce high quality content with consistent branding.
-       Standards for splash screens, lower thirds, discalmer and logos are going to be avaliable for download. When creating videos please use the appropriate standards as it
-       pertains to the respective auxilary organzations (National, MKAC, Atfal, Ansar and Lajna events).
-
-    </p>
+      <p>Page dedicated to Lajna
     <table style="width:100%">
       <tr>
         <th></th>
