--- a/HowToVideos.html
+++ b/HowToVideos.html
@@ -119,7 +119,7 @@ footer {
       <li><a href="#">Tokyo</a></li>
     </ul> -->
 
-    <p><a style="color:black;" href="Index.html">HOME</a></p>
+    <p><a style="color:black;" href="index.html">HOME</a></p>
     <ol>
 
         <li><a style="color:black;"  href="#section1">Splash Screen</a></li>
@@ -138,7 +138,7 @@ footer {
     }
     </style>
 
-    <a href="Index.html">
+    <a href="index.html">
       <img src="logo.png" alt="HOME" style="width:150px;height:150px;border:0">
     </a>
 
